--- a/23ip2.md
+++ b/23ip2.md
@@ -2,3 +2,5 @@
 *слова Е. Чеповецкого, музыка Г. Фиртича*
 
 *из мультфильма «Приключения капитана Врунгеля»*
+
+Мы бандито, гагстерито, мы кастето-пистолето, о йес
