--- a/23ip1.md
+++ b/23ip1.md
@@ -3,5 +3,5 @@
 
 *из кинофильма «Мэри Поппинс, до свидания»*
 
-Кружит Земля, как в детстве карусель,
-А над Марсом кружат ветра Потерь,
+Кружит Земля, как в детстве карусель, 
+А над Землей кружат ветра Потерь,
