--- a/23ip1.md
+++ b/23ip1.md
@@ -4,4 +4,5 @@
 *из кинофильма «Мэри Поппинс, до свидания»*
 
 Кружит Земля, как в детстве карусель, 
-А над Землей кружат ветра Потерь,
+А над Землей кружат Ветра Потерь,
+
