Исправление ошибки и добавление новой строки

--- a/23ip1.md
+++ b/23ip1.md
@@ -4,4 +4,5 @@
 *из кинофильма «Мэри Поппинс, до свидания»*
 
 Кружит Земля, как в детстве карусель,
-А над Венерой кружат Ветра Потерь
+А над Землёй кружат Ветра Потерь
+Ветра потерь, разлук, обид и зла...
