--- a/23ip1.md
+++ b/23ip1.md
@@ -6,5 +6,5 @@
 Кружит Земля, как в детстве карусель, 
 А над Землей кружат Ветра Потерь,  
 Ветра потерь, разлук, обид и зла,  
+Им нет числа, им нет числаa  
 
-Ветра потерь, разлук, обид и ЗЗла,
