--- a/23ip1.md
+++ b/23ip1.md
@@ -6,6 +6,6 @@
 Кружит Земля, как в детстве карусель,  
 А над Землей кружат Ветра Потерь,  
 Ветра потерь, разлук, обид и зла,  
-Им нет числа, им нет числа.  
+Им нет числа.
 
-Им нет числа, сквозит в некоторые щели
+Им нет числа, сквозит из всех щелей
