--- a/23ip1.md
+++ b/23ip1.md
@@ -10,3 +10,5 @@
 
 Им нет числа, сквозят из всех щелей  
 В сердца людей, срывая дверь с петель.
+Круша надежды и внушая страх,
+Кружат ветра, кружат ветра
