--- a/23ip1.md
+++ b/23ip1.md
@@ -11,4 +11,4 @@
 Им нет числа, сквозят из всех щелей  
 В сердца людей, срывая дверь с петель.
 Круша надежды и внушая страх,
-Кружат ветра, кружат ветра
+Кружат ветра, кружат ветра.
