добавлена новая строка

--- a/23ip1.md
+++ b/23ip1.md
@@ -12,3 +12,4 @@
 В сердца людей, срывая дверь с петель.  
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.
+Сотни лет и день, и ночь вращается
