Добавил новую строку

--- a/23ip1.md
+++ b/23ip1.md
@@ -11,5 +11,7 @@
 Им нет числа, сквозят из всех щелей  
 В сердца людей, срывая дверь с петель.  
 Круша надежды и внушая страх,  
-Кружат ветра, кружат ветра.
-Сотни лет и день, и ночь вращается
+Кружат ветра, кружат ветра.  
+
+Сотни лет и день, и ночь вращается  
+Карусель-Земла,
