--- a/23ip1.md
+++ b/23ip1.md
@@ -13,5 +13,5 @@
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и день, и ночь вращается  
-Карусель-Земла,
+Сотни лет и день, и ночь вращается,  
+Карусель-Земля,
