Добавление строчки песни

--- a/23ip1.md
+++ b/23ip1.md
@@ -15,4 +15,5 @@
 
 Сотни лет и день, и ночь вращается,  
 Карусель-Земля.  
-Сотни лет все ветры возвращаются
+Сотни лет все ветры возвращаются  
+На круги своя.
