добавлена строка с ошибкой

--- a/23ip1.md
+++ b/23ip1.md
@@ -16,4 +16,6 @@
 Сотни лет и день, и ночь вращается,  
 Карусель-Земля.  
 Сотни лет все ветры возвращаются  
-На круги своя.
+На круги своя.  
+  
+Сотни лет и день, и ноч вращается
