--- a/23ip1.md
+++ b/23ip1.md
@@ -16,4 +16,7 @@
 Сотни лет и день, и ночь вращается,  
 Карусель-Земля.  
 Сотни лет все ветры возвращаются  
-На круги своя.
+На круги своя.  
+  
+Но есть на свете ветер перемен  
+Он прилетит, прогнав ветра измен
