--- a/23ip1.md
+++ b/23ip1.md
@@ -18,5 +18,6 @@
 Сотни лет все ветры возвращаются  
 На круги своя.  
   
-Но есть на свете ветер перемен  
-Он прилетит, прогнав ветра измен
+Но есть на свете ветер перемен.  
+Он прилетит, прогнав ветра измен.  
+Развеет он, когда придет пора
