последння попытка добавления запятой

--- a/23ip1.md
+++ b/23ip1.md
@@ -20,4 +20,5 @@
   
 Но есть на свете ветер перемен.  
 Он прилетит, прогнав ветра измен.  
-Развеет он, когда придет пора
+Развеет он, когда придет пора,
+
