--- a/23ip1.md
+++ b/23ip1.md
@@ -21,4 +21,4 @@
 Но есть на свете ветер перемен.  
 Он прилетит, прогнав ветра измен.  
 Развеет он, когда придет пора,
-
+Ветер разук, обид ветра.
