--- a/23ip1.md
+++ b/23ip1.md
@@ -20,5 +20,5 @@
   
 Но есть на свете ветер перемен.  
 Он прилетит, прогнав ветра измен.  
-Развеет он, когда придет пора,
-Ветер разук, обид ветра.
+Развеет он, когда придет пора,  
+Ветер разрух, обид ветра.
