--- a/23ip2.md
+++ b/23ip2.md
@@ -4,4 +4,5 @@
 *из мультфильма «Приключения капитана Врунгеля»*
 
 Мы бандито, гангстерито,
-Мы кастето, пистолето, oh yes !
+
+Мы кастето, пистолето, о йес,
