--- a/23ip2.md
+++ b/23ip2.md
@@ -5,5 +5,5 @@
 
 Мы бандито, гангстерито,  
 Мы кастето, пистолето, о йес,  
-Мы стрелянто,
-Убиванто, укpаданто то и это, oh, yes.
+Мы стрелянто,Убиванто,  
+укpаданто то и это, о, йес.  
