--- a/23ip2.md
+++ b/23ip2.md
@@ -5,5 +5,5 @@
 
 Мы бандито, гангстерито,  
 Мы кастето, пистолето, о йес,  
-Мы стрелянто,Убиванто,  
+Мы стрелянто, убиванто,  
 укpаданто то и это, о, йес.  
