--- a/23ip2.md
+++ b/23ip2.md
@@ -6,4 +6,4 @@
 Мы бандито, гангстерито,  
 Мы кастето, пистолето, о йес,  
 Мы стрелянто, убиванто,  
-укpаданто то и это, о, йес.  
+Укpаданто то и это, о, йес.  
