--- a/23ip1.md
+++ b/23ip1.md
@@ -21,4 +21,6 @@
 Но есть на свете ветер перемен.  
 Он прилетит, прогнав ветра измен.  
 Развеет он, когда придет пора,  
-Ветер разрух, обид ветра.
+Ветер разрух, обид ветра.  
+
+Сотни лет и день, и ночь вращается
