--- a/23ip1.md
+++ b/23ip1.md
@@ -22,3 +22,5 @@
 Он прилетит, прогнав ветра измен.  
 Развеет он, когда придет пора,  
 Ветер разрух, обид ветра.
+
+Сотни лет и день и ночь вращается
