Добавил новую строку

--- a/23ip1.md
+++ b/23ip1.md
@@ -23,4 +23,5 @@
 Развеет он, когда придет пора,  
 Ветер разрух, обид ветра.
 
-Сотни лет и день и ночь вращается
+Сотни лет и день и ночь вращается  
+Карусель-Земля.
