--- a/23ip1.md
+++ b/23ip1.md
@@ -4,23 +4,23 @@
 *из кинофильма «Мэри Поппинс, до свидания»*
 
 Кружит Земля, как в детстве карусель,  
-А над Землей кружат Ветра Потерь,  
+А над Землей кружат ветра потерь,  
 Ветра потерь, разлук, обид и зла,  
 Им нет числа.
 
-Им нет числа, сквозят из всех щелей  
-В сердца людей, срывая дверь с петель.  
+Им нет числа - сквозят из всех щелей,  
+В сердца людей, срывая дверь с петель,  
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и день, и ночь вращается,  
-Карусель-Земля.  
+Сотни лет и день и ночь вращается  
+Карусель-Земля,  
 Сотни лет все ветры возвращаются  
 На круги своя.  
   
-Но есть на свете ветер перемен.  
-Он прилетит, прогнав ветра измен.  
-Развеет он, когда придет пора,  
-Ветер разрух, обид ветра.
+Но есть на свете ветер перемен,  
+Он прилетит, прогнав ветра измен,  
+Развеет он, когда прийдёт пора  
+Ветер разлук, обид ветра.
 
-Сотни лет и день и ночь вращается
+Сотни лет и день и ночь вращается  
