добавила новую строку

--- a/23ip1.md
+++ b/23ip1.md
@@ -24,4 +24,5 @@
 Ветер разлук, обид ветра.
 
 Сотни лет и день и ночь вращается  
-Карусель-Земля.
+Карусель-Земля.  
+Сотни лет все в жизни возвращается
