--- a/23ip1.md
+++ b/23ip1.md
@@ -3,7 +3,7 @@
 
 *из кинофильма «Мэри Поппинс, до свидания»*
 
-Кружит Земля, как в детстве карусель,  
+Кружит башка, как в детстве юла,  
 А над Землей кружат ветра потерь,  
 Ветра потерь, разлук, обид и зла,  
 Им нет числа.
@@ -25,3 +25,5 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
+
+//Изменил слова в строчке 6.
