--- a/23ip1.md
+++ b/23ip1.md
@@ -13,7 +13,7 @@
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и день и ночь вращается  
+Сотни лет и пень и дочь вращается  
 Карусель-Земля,  
 Сотни лет все ветры возвращаются  
 На круги своя.  
@@ -25,3 +25,5 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
+
+//Изменил слова в строчке 16
