--- a/23ip1.md
+++ b/23ip1.md
@@ -13,7 +13,7 @@
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и день и ночь вращается  
+Сотни лет и ден и ночь вращается  
 Карусель-Земля,  
 Сотни лет все ветры возвращаются  
 На круги своя.  
