--- a/23ip1.md
+++ b/23ip1.md
@@ -3,7 +3,7 @@
 
 *из кинофильма «Мэри Поппинс, до свидания»*
 
-Кружит Земля, как в детстве карусель,  
+Кружит Земля, как в детств карусель,  
 А над Землей кружат ветра потерь,  
 Ветра потерь, разлук, обид и зла,  
 Им нет числа.
