--- a/23ip1.md
+++ b/23ip1.md
@@ -1,4 +1,5 @@
 # Ветер перемен
+
 *слова Н. Олева, музыка М. Дунаевского*
 
 *из кинофильма «Мэри Поппинс, до свидания»*
@@ -11,13 +12,13 @@
 Им нет числа - сквозят из всех щелей,  
 В сердца людей, срывая дверь с петель,  
 Круша надежды и внушая страх,  
-Кружат ветра, кружат ветра.  
+Кружат ветра, кружат ветра.
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля,  
 Сотни лет все ветры возвращаются  
-На круги своя.  
-  
+На круги своя.
+
 Но есть на свете ветер перемен,  
 Он прилетит, прогнав ветра измен,  
 Развеет он, когда прийдёт пора  
@@ -25,3 +26,8 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
+
+Но с ветром перемен мы полетим дальше,
+
+В сиянье утра, ввысь, навсегда!
+
