--- a/23ip1.md
+++ b/23ip1.md
@@ -27,7 +27,7 @@
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
 
-Но с ветром перемен мы полетим дальше,
-
-В сиянье утра, ввысь, навсегда!
-
+Завтра ветер переменится, 
+Завтра, прошлому взамен, 
+Он придёт — он будет добрый, ласковый, 
+Ветер перемен.
