Добавил строку, Романцов

--- a/23ip1.md
+++ b/23ip1.md
@@ -3,7 +3,7 @@
 
 *из кинофильма «Мэри Поппинс, до свидания»*
 
-Кружит башка, как в детстве юла,  
+Кружит Земля, как в детстве карусель,  
 А над Землей кружат ветра потерь,  
 Ветра потерь, разлук, обид и зла,  
 Им нет числа.
@@ -13,7 +13,7 @@
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и день и ночь вращается  
+Сопни лет и день и ночь вращается  
 Карусель-Земля,  
 Сотни лет все ветры возвращаются  
 На круги своя.  
@@ -25,5 +25,4 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
-
-//Изменил слова в строчке 6.
+Сопни лет все ветры возвращаются
