--- a/23ip1.md
+++ b/23ip1.md
@@ -13,7 +13,7 @@
 Круша надежды и внушая страх,  
 Кружат ветра, кружат ветра.  
 
-Сотни лет и пень и дочь вращается  
+Сотни лет и день и ночь вращается  
 Карусель-Земля,  
 Сотни лет все ветры возвращаются  
 На круги своя.  
@@ -25,5 +25,7 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
+Сотни мет — всё в жизни возвращается
 
-//Изменил слова в строчке 16
+
+
