--- a/23ip1.md
+++ b/23ip1.md
@@ -25,7 +25,4 @@
 
 Сотни лет и день и ночь вращается  
 Карусель-Земля.
-Сотни мет — всё в жизни возвращается
-
-
-
+Сотни лет — всё в жизни возвращается
