--- a/23ip2.md
+++ b/23ip2.md
@@ -7,4 +7,4 @@
 Мы кастето, пистолето, о йес,  
 Мы стрелянто, убиванто,  
 Укpаданто то и это, о, йес.  
-Банко-тресто президенто ограблянто ун моменто, о йес,
+Банко-тресто президенто
