--- a/23ip2.md
+++ b/23ip2.md
@@ -7,5 +7,5 @@
 Мы кастето, пистолето, о йес,  
 Мы стрелянто, убиванто,  
 Укpаданто то и это, о, йес.  
-Банко-тресто президенто
-Огpаблянто дос моменто.
+Банко-тресто президенто  
+Огpаблянто ун моменто.
