--- a/23ip2.md
+++ b/23ip2.md
@@ -8,4 +8,5 @@
 Мы стрелянто, убиванто,  
 Укpаданто то и это, о, йес.  
 Банко-тресто президенто
-Pежисенто вас не сниманто киноленто.
+Pежисенто вас не сниманто киноленто.  
+И за енто,
