--- a/23ip2.md
+++ b/23ip2.md
@@ -9,4 +9,5 @@
 Укpаданто то и это, о, йес.  
 Банко-тресто президенто
 Pежисенто вас не сниманто киноленто.  
-И за енто,
+И за енто,  
+Режисенто нас снимато киноленто.
