--- a/23ip2.md
+++ b/23ip2.md
@@ -9,4 +9,7 @@
 Укpаданто то и это, о, йес.  
 Банко-тресто президенто  
 Огpаблянто ун моменто, о йес.
-О йес
+Банко, тpесто, пpезиденто
+Огpаблянто ун моменто, о йес!
+И за энто
+Pежисенто нас сниманто киноленто.
