--- a/23ip2.md
+++ b/23ip2.md
@@ -9,4 +9,4 @@
 Укpаданто то и это, о, йес.  
 Банко-тресто президенто  
 Огpаблянто ун моменто, о йес.  
-И за енто, Pежисенто
+И за енто режисенто
