--- a/23ip2.md
+++ b/23ip2.md
@@ -10,4 +10,6 @@
 Банко-тресто президенто  
 Огpаблянто ун моменто, о йес.  
 И за енто режисенто  
-Нас сниманто в киноленто о, йес.
+Нас сниманто в киноленто о, йес.  
+
+Мы бандито знаменито,
