--- a/23ip2.md
+++ b/23ip2.md
@@ -12,4 +12,5 @@
 И за енто режисенто  
 Нас сниманто в киноленто о, йес.  
 
-Мы бандито знаменито,
+Мы бандито знаменито,  
+Мы стрелято пистолето, о, йес.
