--- a/23ip2.md
+++ b/23ip2.md
@@ -13,4 +13,5 @@
 Нас сниманто в киноленто о, йес.  
 
 Мы бандито знаменито,  
-Мы стрелято пистолето, о, йес.
+Мы стрелято пистолето, о, йес.  
+Мы фиато, разъезжато
