--- a/23ip2.md
+++ b/23ip2.md
@@ -14,4 +14,5 @@
 
 Мы бандито знаменито,  
 Мы стрелято пистолето, о, йес.  
-Мы фиато, разъезжато
+Мы фиато, разъезжато  
+Целый день в кабриолето, о, йес
