--- a/23ip2.md
+++ b/23ip2.md
@@ -15,4 +15,5 @@
 Мы бандито знаменито,  
 Мы стрелято пистолето, о, йес.  
 Мы фиато, разъезжато  
-Целый день в кабриолето, о, йес
+Целый день в кабриолето, о, йес  
+Постоянно пьём чинзано,
